@@ -288,11 +288,12 @@ static void Mod_LoadEntities (lump_t *l)
 	ents = (char *) FS_LoadHunkFile (entfilename, &path_id);
 	if (ents)
 	{
-		// use ent file only from the same gamedir as the map itself
-		if (path_id != loadmodel->path_id)
+		// use ent file only from the same gamedir as the map
+		// itself or from a searchpath with higher priority.
+		if (path_id < loadmodel->path_id)
 		{
 			Hunk_FreeToLowMark(mark);
-			Con_Printf("%s ignored (not from the same gamedir)\n", entfilename);
+			Con_Printf("ignored %s from a gamedir with lower priority\n", entfilename);
 		}
 		else
 		{
