@@ -667,11 +667,12 @@ static void Mod_LoadLighting (lump_t *l)
 			data = (byte*) FS_LoadHunkFile (litfilename, &path_id);
 			if (data)
 			{
-				// use lit file only from the same gamedir as the map itself
-				if (path_id != loadmodel->path_id)
+				// use lit file only from the same gamedir as the map
+				// itself or from a searchpath with higher priority.
+				if (path_id < loadmodel->path_id)
 				{
 					Hunk_FreeToLowMark(mark);
-					Con_Printf("%s ignored (not from the same gamedir)\n", litfilename);
+					Con_Printf("ignored %s from a gamedir with lower priority\n", litfilename);
 				}
 				else
 				if (data[0] == 'Q' && data[1] == 'L' && data[2] == 'I' && data[3] == 'T')
@@ -822,11 +823,12 @@ static void Mod_LoadEntities (lump_t *l)
 	ents = (char *) FS_LoadHunkFile (entfilename, &path_id);
 	if (ents)
 	{
-		// use ent file only from the same gamedir as the map itself
-		if (path_id != loadmodel->path_id)
+		// use ent file only from the same gamedir as the map
+		// itself or from a searchpath with higher priority.
+		if (path_id < loadmodel->path_id)
 		{
 			Hunk_FreeToLowMark(mark);
-			Con_Printf("%s ignored (not from the same gamedir)\n", entfilename);
+			Con_Printf("ignored %s from a gamedir with lower priority\n", entfilename);
 		}
 		else
 		{
